--- a/package.json
+++ b/package.json
@@ -17,14 +17,19 @@
     "@babel/preset-env": "^7.10.4",
     "@babel/preset-react": "^7.10.4",
     "@babel/runtime": "^7.10.4",
+    "@material-ui/core": "^4.11.1",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "axios": "^0.19.2",
     "babel-loader": "^8.1.0",
+    "capitalize": "^2.0.3",
     "express": "^4.17.1",
     "html-webpack-plugin": "^4.3.0",
     "npm-run-all": "^4.1.5",
     "q": "^1.5.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-uuid": "^1.0.2",
     "request": "^2.88.2",
     "webpack": "^4.43.0",
