added a bunch of stuff and reformatted files and stuff

--- a/package.json
+++ b/package.json
@@ -1,39 +1,50 @@
 {
-  "name": "d2-bounties",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "npm-run-all -p dev-watch dev-server",
-    "dev": "webpack --mode development",
-    "prod": "webpack --mode production",
-    "dev-watch": "webpack-dev-server --mode development --watch"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@babel/core": "^7.10.4",
-    "@babel/plugin-transform-runtime": "^7.10.4",
-    "@babel/preset-env": "^7.10.4",
-    "@babel/preset-react": "^7.10.4",
-    "@babel/runtime": "^7.10.4",
-    "@material-ui/core": "^4.11.1",
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.56",
-    "axios": "^0.19.2",
-    "babel-loader": "^8.1.0",
-    "capitalize": "^2.0.3",
-    "express": "^4.17.1",
-    "html-webpack-plugin": "^4.3.0",
-    "npm-run-all": "^4.1.5",
-    "q": "^1.5.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-router-dom": "^5.2.0",
-    "react-uuid": "^1.0.2",
-    "request": "^2.88.2",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
-  }
+    "name": "d2-bounties",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "start": "npm-run-all -p dev-watch dev-server",
+        "dev": "webpack --mode development",
+        "prod": "webpack --mode production",
+        "dev-watch": "webpack-dev-server --mode development --watch"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "@babel/core": "^7.10.4",
+        "@babel/plugin-transform-runtime": "^7.10.4",
+        "@babel/preset-env": "^7.10.4",
+        "@babel/preset-react": "^7.10.4",
+        "@babel/runtime": "^7.10.4",
+        "@material-ui/core": "^4.11.1",
+        "@material-ui/icons": "^4.9.1",
+        "@material-ui/lab": "^4.0.0-alpha.56",
+        "axios": "^0.19.2",
+        "babel-eslint": "^10.1.0",
+        "babel-loader": "^8.1.0",
+        "capitalize": "^2.0.3",
+        "eslint": "^7.14.0",
+        "eslint-config-airbnb": "^18.2.1",
+        "eslint-config-prettier": "^6.15.0",
+        "eslint-loader": "^4.0.2",
+        "eslint-plugin-import": "^2.22.1",
+        "eslint-plugin-jsx-a11y": "^6.4.1",
+        "eslint-plugin-prettier": "^3.1.4",
+        "eslint-plugin-react": "^7.21.5",
+        "eslint-plugin-react-hooks": "^4.2.0",
+        "express": "^4.17.1",
+        "html-webpack-plugin": "^4.3.0",
+        "npm-run-all": "^4.1.5",
+        "prettier": "^2.2.1",
+        "q": "^1.5.1",
+        "react": "^16.13.1",
+        "react-dom": "^16.13.1",
+        "react-router-dom": "^5.2.0",
+        "react-uuid": "^1.0.2",
+        "request": "^2.88.2",
+        "webpack": "^4.43.0",
+        "webpack-cli": "^3.3.12",
+        "webpack-dev-server": "^3.11.0"
+    }
 }
